prepared app for deployment week1

--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -32,7 +32,7 @@
                     <a class="nav-link" href="{% url 'djangoapp:n_about' %}">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact us Pleaaaase!</a>
+                    <a class="nav-link" href="{% url 'djangoapp:n_contact' %}">Contact us</a>
                 </li>
                 
             </ul>
