--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -21,6 +21,12 @@
                 <a class="navbar-brand" href="#">Best Cars</a>
             </div>
             <ul class="nav navbar-nav navbar-right">
+                    <a class="nav navbar-nav navbar-right" href="{% url 'djangoapp:n_about' %}">About Us</a>      
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <a class="nav navbar-nav navbar-right" href="{% url 'djangoapp:n_contact' %}">Contact Us</a>
+        </ul>
+            <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
                 <li>
                     <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
