--- a/server/djangoapp/templates/djangoapp/about.html
+++ b/server/djangoapp/templates/djangoapp/about.html
@@ -50,4 +50,5 @@
 Welcome to Best Cars dealership, home to the best cars in North America. We sell domestic and imported cars at reasonable prices.
 </h1>
 </body>
+<!-- This is just a test comment -->
 </html>
