--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -1,6 +1,6 @@
 {% extends 'djangoapp/base.html' %}
 
-{% block title_head %} Dealership Home {% endblock %}
+{% block title_head %} Dealership - Home {% endblock %}
 
 {% block content %}
 <body>
