--- a/server/djangoapp/templates/djangoapp/contact.html
+++ b/server/djangoapp/templates/djangoapp/contact.html
@@ -1,55 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Dealership Review</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <link href="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.css" rel="stylesheet">
-    <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.js"></script>
-    <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
+{% extends 'djangoapp/base.html' %}
 
-</head>
-    <body>
-        <nav class="navbar navbar-light bg-light">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="#">Best Cars</a>
-                </div>
-                <ul class="nav navbar-nav navbar-right">
-                        <a class="nav navbar-nav navbar-right" href="{% url 'djangoapp:n_about' %}">About Us</a>      
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <a class="nav navbar-nav navbar-right" href="{% url 'djangoapp:n_contact' %}">Contact Us</a>
-            </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    {% if user.is_authenticated %}
-                    <li>
-                        <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
-                        <a class="btn btn-link" href="#">Logout</a>
-                    </li>
-                    {% else %}
-                    <li>
-                        <form class="form-inline" action="#" method="post">
-                            {% csrf_token %}
-                            <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Username" name="username" >
-                                <input type="password" class="form-control" placeholder="Password" name="psw" >
-                                <button class="btn btn-primary" type="submit">Login</button>
-                                <a class="btn btn-link" href="#">Sign Up</a>
-                            </div>
-                        </form>
-                    </li>
-                    {% endif %}
-                </ul>
-            </div>
-        </nav>
-        <h1>Contact Us:</h1><br>
-        <h2>Address:</h2> 
-        <h3>Germany</h3>
-        <h2>Phone No.:</h2>
-        <h3>+123458696960</h3>
-    </body>
-</html>
+{% block title_head %} Dealership - About {% endblock %}
+
+{% block content %}
+<body>
+  <!-- Container -->
+  <div class="container-fluid">
+    <br>
+    <h1>Contact Us:</h1><br>
+    <h2>Address:</h2> 
+    <h3>Germany</h3>
+    <h2>Phone No.:</h2>
+    <h3>+123458696960</h3>
+  </div>
+</body>
+{% endblock %}
