Fixing the car icon.

--- a/server/djangoapp/templates/djangoapp/base.html
+++ b/server/djangoapp/templates/djangoapp/base.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <title>{% block title_head %} Base {% endblock %}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="shortcut icon" href="#">
-    <link rel="icon" href="{% static 'images/n2.png' %}" type="image/x-icon">
+    <link rel="icon" href="{% static 'car2.png' %}" type="image/x-icon">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
