--- a/server/djangoapp/templates/djangoapp/registration.html
+++ b/server/djangoapp/templates/djangoapp/registration.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8">
     {% load static %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="shortcut icon" href="#">
 </head>
     <body>
-    <h1> Registration! </h1>
+    <div class="container-fluid">
+    <h2> Sign Up </h2>
+    <br>
+    <form action="{% url 'djangoapp:n_registration' %}"  method="post">
+        {% csrf_token %}
+        <div class="form-group">
+            <label for="username"><b>User Name</b></label>
+            <input type="text" class="form-control" placeholder="Enter User Name: " name="username" required>
+        </div>
+        <div class="form-group">
+            <label for="firstname"><b>First Name</b></label>
+            <input type="text" class="form-control" placeholder="Enter First Name: " name="firstname" required>
+        </div>
+        <div class="form-group">
+            <label for="lastname"><b>Last Name</b></label>
+            <input type="text" class="form-control" placeholder="Enter Last Name: " name="lastname" required>
+        </div>
+        <div class="form-group">
+            <label for="psw"><b>Password</b></label>
+            <input type="password" class="form-control" placeholder="Enter Password: " name="psw" required>
+        </div>
+        <button class="button btn-outline-primary" type="submit">Sign Up</button>
+    </form>
+    <br>
+    </div>
     </body>
 </html>
