--- a/server/djangoapp/templates/djangoapp/base.html
+++ b/server/djangoapp/templates/djangoapp/base.html
@@ -21,6 +21,9 @@
             <a class="navbar-brand" href="{% url 'djangoapp:n_index' %}">Best Cars</a>
         </div>
         <ul class="nav navbar-nav navbar-right">
+                <a class="nav navbar-nav navbar-right" href="{% url 'djangoapp:n_database' %}">Update Database</a>      
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
                 <a class="nav navbar-nav navbar-right" href="{% url 'djangoapp:n_about' %}">About Us</a>      
         </ul>
         <ul class="nav navbar-nav navbar-right">
