--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -8,7 +8,7 @@
   <div class="container-fluid">
     <h2 class="text-center"> This is home </h2>
     <br>
-    <table class="table" id="table">
+    <table class="table" id="table" data-filter-control="true">
         <thead>
             <tr>
                 <th data-field="id">ID</th>
@@ -16,7 +16,7 @@
                 <th data-field="city">City</th>
                 <th data-field="address">Address</th>
                 <th data-field="zip">Zip</th>
-                <th data-field="state">State</th>
+                <th data-field="state" data-filter-control="select">State</th>
             </tr>
         </thead>
         <tbody>
@@ -34,4 +34,9 @@
     </table>
   </div>
 </body>
+<script>
+    $(function() {
+      $('#table').bootstrapTable()
+    })
+  </script>
 {% endblock %}
