--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -1,18 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Dealership Review</title>
-    {% load static %}
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-</head>
+{% extends 'djangoapp/base.html' %}
 
-    <body>
+{% block title_head %} Dealership - Home {% endblock %}
 
-    <!--Add a nav bar here -->
-
-    <!-- Add reviews as cards -->
-
-    </body>
-
-</html>
+{% block content %}
+<body>
+  <!-- Container -->
+  <div class="container-fluid">
+    <h2 class="text-center"> Dealer Reviews </h2>
+    <br>
+    <div class="card-columns">
+        <div class="card">
+            <img class="card-img-left" src="{{MEDIA_URL}}/emoji/positive.png" style="width:10%;">
+            <div class="card-body" >
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+        </div>
+    </div>
+  </div>
+</body>
+<script>
+    $(function() {
+      $('#table').bootstrapTable()
+    })
+  </script>
+{% endblock %}
