--- a/server/djangoapp/templates/djangoapp/base.html
+++ b/server/djangoapp/templates/djangoapp/base.html
@@ -20,7 +20,7 @@
         <div class="navbar-header">
             <a class="navbar-brand" href="{% url 'djangoapp:n_index' %}">Best Cars</a>
         </div>
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right d-none">
                 <a class="nav navbar-nav navbar-right" href="{% url 'djangoapp:n_database' %}">Update Database</a>      
         </ul>
         <ul class="nav navbar-nav navbar-right">
