--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -7,7 +7,10 @@
   <!-- Container -->
   <div class="container-fluid">
     <h2 class="text-center"> Dealer Reviews </h2>
-    <br>
+    {% if user.is_authenticated %}
+    <button class="btn btn-primary" href="#">Add a Review</button>
+    {% endif %}
+    <br><br><br>
     <div class="card-columns">
         {% for review_i in reviews_list %}
         <div class="card">
