--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -1,16 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    {% load static %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/css/bootstrap-datepicker.css" rel="stylesheet">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.js"></script>
+{% extends 'djangoapp/base.html' %}
 
-</head>
-    <body>
-    <!--Add review form here -->
-    </body>
-</html>
+{% block title_head %} Dealership - Home {% endblock %}
+
+{% block content %}
+<body>
+  <!-- Container -->
+  <div class="container-fluid">
+    <h2 class="text-center"> Add Review Page</h2>
+    <br>
+    
+    <form action="{% url 'djangoapp:n_add_review' dealer_id%}"  method="post">
+        {% csrf_token %}
+        <textarea class="form-control" id="content" name="content" rows="2" required></textarea>
+        <input class="form-check-input" type="checkbox" name="purchasecheck" id="purchasecheck">
+        <select name="car" id="car" class="form-select" required>
+            {% for car in cars %}
+                <option selected value={{car.id}}>{{car.name}}-{{car.make.name}}-{{ car.year|date:"Y" }}</option>
+            {% endfor %}
+       </select>
+       <input class="date-own form-control" type="text" name="purchasedate" id="purchasedate">
+        <button class="btn btn-outline-primary" type="submit">Submit Review</button>
+    </form>
+  </div>
+</body>
+<script type="text/javascript">
+    $('.date-own').datepicker({
+       format: 'mm/dd/yyyy'
+     });
+</script>
+{% endblock %}
