--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -6,7 +6,7 @@
 <body>
   <!-- Container -->
   <div class="container-fluid">
-    <h2 class="text-center"> This is home </h2>
+    <h2 class="text-center"> List of Dealerships </h2>
     <br>
     <table class="table" id="table" data-filter-control="true">
         <thead>
