showing no reviews case

--- a/server/djangoapp/templates/djangoapp/about.html
+++ b/server/djangoapp/templates/djangoapp/about.html
@@ -7,7 +7,9 @@
   <!-- Container -->
   <div class="container-fluid">
     <h2 class="text-center">    
-    Welcome to Best Cars dealership, home to the best cars in North America. We sell domestic and imported cars at reasonable prices.
+    Welcome to Best Cars dealership.<br>
+    Home to the best cars in North America.<br>
+    <h3 class="text-center">We sell domestic and imported cars at reasonable prices.</h3>
     </h2>
     <br>
   </div>
